--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "@adamcarriere/indeed-scraper",
+  "name": "job-seeking-robot",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "start": "node ./index.js",
+    "util/init": "node ./utils/init-trello-board.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "puppeteer": "^20.5.0"
+    "dotenv": "^16.3.1",
+    "franc-min": "^6.1.0",
+    "gpt-3-encoder": "^1.1.4",
+    "natural": "^6.5.0",
+    "openai": "^3.3.0",
+    "puppeteer": "^20.5.0",
+    "uuid": "^9.0.0",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/strictest": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "typescript": "^5.1.3"
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
