--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "job-seeking-robot",
+  "name": "jobbot",
   "type": "module",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "start": "node ./index.js",
-    "util/init": "node ./utils/init-trello-board.js"
+    "util/init-board": "node ./utils/init-trello-board.js",
+    "util/compress": "node ./utils/compress-text.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
